--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
+    "@langchain/community": "^0.3.55",
+    "@langchain/core": "^0.3.75",
+    "@octokit/rest": "^22.0.0",
+    "@octokit/types": "^14.1.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-progress": "^1.1.1",
@@ -35,27 +41,42 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@uiw/react-md-editor": "^4.0.8",
+    "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
+    "chalk": "^5.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.0",
     "geist": "^1.3.0",
+    "langchain": "^0.3.33",
     "lucide-react": "^0.473.0",
+    "markdown-it": "^14.1.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
+    "octokit": "^5.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
+    "react-markdown-editor-lite": "^1.3.4",
+    "react-responsive": "^10.0.1",
     "server-only": "^0.0.1",
     "sonner": "^1.7.2",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "usehooks-ts": "^3.1.1",
+    "zod": "^3.24.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/chalk": "^2.2.4",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
