--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.0.9",
     "@auth/prisma-adapter": "^2.7.2",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
@@ -35,6 +36,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
@@ -42,6 +44,7 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "@uiw/react-md-editor": "^4.0.8",
+    "ai": "^4.0.32",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.2",
@@ -64,6 +67,7 @@
     "react-icons": "^5.5.0",
     "react-markdown-editor-lite": "^1.3.4",
     "react-responsive": "^10.0.1",
+    "react-syntax-highlighter": "^16.1.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.2",
     "superjson": "^2.2.1",
@@ -71,16 +75,17 @@
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
-    "zod": "^3.24.1",
+    "zod": "3.23.8",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/chalk": "^2.2.4",
     "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.10",
+    "@types/node": "^20.17.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
@@ -90,7 +95,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.5.3"
+    "typescript": "^5.7.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
