--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.1.7",
@@ -70,6 +71,7 @@
     "react-syntax-highlighter": "^16.1.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.2",
+    "stripe": "^20.0.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^4.0.2",
